# ezwhisper

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  index.html  package-lock.json  package.json
src/: App.tsx  audio.rs  cleanup.rs  config.rs  input.rs  main.rs  menubar.rs  output.rs  transcribe.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  commands.rs  config.rs  input.rs  lib.rs  main.rs  output.rs  transcribe.rs
